bin/tests/errors/parser/parser_err_invalid_literal_suffix.swg
#global fileprivate

enum A { B = 1'any } // swc-expected-error {{parser_err_invalid_literal_suffix}}
